[package]
name = "bashx"
version = "0.2.0"
authors = ["Deepanshu Mishra <hello@deepanshumishra.xyz>"]
description = "Run bash scripts from GitHub with ease"
license = "MIT"
repository = "https://github.com/DeepanshuMishraa/bashx"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
walkdir = "2.5.0"
